--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.markdown-content {
+  line-height: 1.7;
+}
+
+.markdown-content p {
+  margin-bottom: 16px;
+  font-weight: 300;
+}
+
+.markdown-content ul {
+  padding-left: 20px;
+}
+
+.markdown-content li {
+  list-style-type: initial;
+  margin-bottom: 8px;
+}
+
+.markdown-content :not(pre) > code[class*='language-'] {
+  background: #202024;
+}
+
+.markdown-content code[class*='language-'],
+pre[class*='language-'] {
+  text-shadow: none;
+  color: #d0d0ff;
+}
+
+.markdown-content pre[class*='language-'] {
+  background: #1e1e22;
+  border-radius: 10px;
+}
